--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_C_STANDARD 99)
 set(SOURCE_FILES
         src/libq.c
         src/libq.h
+        src/linked_list.c
+        src/linked_list.h
 )
 
 add_executable(main ${SOURCE_FILES})
